--- a/package.json
+++ b/package.json
@@ -14,7 +14,25 @@
 	},
 	"scripts": {
 		"start": "webpack-dev-server --mode development --open --hot",
-		"build": "webpack --mode production"
+		"build": "webpack --mode production",
+		"test": "jest"
+	},
+	"jest": {
+		"snapshotSerializers": [
+			"enzyme-to-json/serializer"
+		],
+		"setupFiles": [
+			"./src/setupTests.js"
+		],
+		"moduleFileExtensions": [
+			"js"
+		],
+		"moduleDirectories": [
+			"node_modules"
+		],
+		"transform": {
+			"\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/config/jest/assetsTransformer.js"
+		}
 	},
 	"author": "Stephane Candelas",
 	"license": "ISC",
@@ -22,6 +40,7 @@
 		"prop-types": "^15.7.2",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"react-icons": "^3.10.0",
 		"react-redux": "^7.2.0",
 		"redux": "^4.0.5"
 	},
@@ -29,11 +48,17 @@
 		"@babel/core": "^7.9.6",
 		"@babel/preset-env": "^7.9.6",
 		"@babel/preset-react": "^7.9.4",
+		"babel-jest": "^26.0.1",
 		"babel-loader": "^8.1.0",
 		"babel-plugin-transform-class-properties": "^6.24.1",
 		"css-loader": "^3.5.3",
+		"enzyme": "^3.11.0",
+		"enzyme-adapter-react-16": "^1.15.2",
+		"enzyme-to-json": "^3.5.0",
 		"file-loader": "^6.0.0",
 		"html-webpack-plugin": "^4.3.0",
+		"jest": "^26.0.1",
+		"react-test-renderer": "^16.13.1",
 		"style-loader": "^1.2.1",
 		"webpack": "^4.43.0",
 		"webpack-cli": "^3.3.11",
