--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
 		"moduleDirectories": [
 			"node_modules"
 		],
-		"transform": {
-			"\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/config/jest/assetsTransformer.js"
+		"moduleNameMapper": {
+			"\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js"
 		}
 	},
 	"author": "Stephane Candelas",
@@ -48,16 +48,16 @@
 		"@babel/core": "^7.9.6",
 		"@babel/preset-env": "^7.9.6",
 		"@babel/preset-react": "^7.9.4",
+		"@testing-library/jest-dom": "^5.11.6",
+		"@testing-library/react": "^11.1.2",
+		"@testing-library/user-event": "^12.2.2",
 		"babel-jest": "^26.0.1",
 		"babel-loader": "^8.1.0",
 		"babel-plugin-transform-class-properties": "^6.24.1",
 		"css-loader": "^3.5.3",
-		"enzyme": "^3.11.0",
-		"enzyme-adapter-react-16": "^1.15.2",
-		"enzyme-to-json": "^3.5.0",
 		"file-loader": "^6.0.0",
 		"html-webpack-plugin": "^4.3.0",
-		"jest": "^26.0.1",
+		"jest": "^26.1.0",
 		"react-test-renderer": "^16.13.1",
 		"style-loader": "^1.2.1",
 		"webpack": "^4.43.0",
