test Hearder added

--- a/package.json
+++ b/package.json
@@ -18,20 +18,27 @@
 		"test": "jest"
 	},
 	"jest": {
-		"snapshotSerializers": [
-			"enzyme-to-json/serializer"
-		],
 		"setupFiles": [
 			"./src/setupTests.js"
 		],
+		"modulePaths": [
+			"/shared/vendor/modules"
+		],
 		"moduleFileExtensions": [
-			"js"
+			"js",
+			"jsx"
 		],
 		"moduleDirectories": [
-			"node_modules"
+			"node_modules",
+			"bower_components",
+			"shared"
 		],
 		"moduleNameMapper": {
-			"\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js"
+			"\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+			"\\.(css|less)$": "identity-obj-proxy",
+			"\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js",
+			"\\.(gif|ttf|eot|svg)$": "<rootDir>/__mocks__/fileMock.js",
+			"^config$": "<rootDir>/configs/app-config.js"
 		}
 	},
 	"author": "Stephane Candelas",
