--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 	"scripts": {
 		"start": "webpack-dev-server --mode development --open --hot",
 		"build": "webpack --mode production",
-		"test": "jest"
+		"test": "jest --watchAll"
 	},
 	"jest": {
 		"setupFiles": [
@@ -35,10 +35,8 @@
 		],
 		"moduleNameMapper": {
 			"\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-			"\\.(css|less)$": "identity-obj-proxy",
 			"\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js",
-			"\\.(gif|ttf|eot|svg)$": "<rootDir>/__mocks__/fileMock.js",
-			"^config$": "<rootDir>/configs/app-config.js"
+			"\\.(gif|ttf|eot|svg)$": "<rootDir>/__mocks__/fileMock.js"
 		}
 	},
 	"author": "Stephane Candelas",
